fixed the .logo class which was too big for some reason

--- a/css/custom.css
+++ b/css/custom.css
@@ -41,6 +41,12 @@ a, a:hover, a:active{
   z-index: 1;
 }
 
+.logo{
+  display: block;
+  height: 100px;
+  margin: 0 auto 30px;
+}
+
 .home_banner_text_container {
   position: absolute;
   background-color: #e67e22;
